Added welcome page main banner styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,4 @@
 
 @import 'layout';
 @import 'fa-custom';
-
-body.application.welcome {
-  .welcome { text-align: center; }
-}
+@import 'application/*';
