--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2,9 +2,11 @@
   padding-top: 25px 0px;
 }
 
+header.main {
+  ul { margin-top: 5px; }
+}
+
 footer.main {
-  position: absolute;
-  bottom:   0px;
   width:    100%;
   height:   45px;
 }
