--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -7,6 +7,9 @@ header.main {
 }
 
 footer.main {
-  width:    100%;
-  height:   45px;
+  a { color: #111; }
+  #social-media {
+    .navbar { padding: 20px 0px; }
+    text-align: center;
+  }
 }
