Added header changes

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,11 @@
 header.main
   nav.navbar.navbar-light.bg-faded
-    = link_to 'Just Chew', root_path, class: 'navbar-brand'
+    = link_to root_path, class: 'navbar-brand'
+      = image_tag 'logo.png', width: 80, height: 40
     ul.nav.navbar-nav
       li.nav-item
         = link_to root_path, class: 'nav-link'
           | Home
+      li.nav-item.float-xs-right
+        = link_to '#', class: 'nav-link'
+          | Log In
