Added welcome page changes

--- a/app/views/application/welcome.slim
+++ b/app/views/application/welcome.slim
@@ -1,1 +1,11 @@
-h1.display-1.welcome Welcome
+#main-banner
+  h1.display-3 Order delivery or take-out!
+  h2.display-4 Choose from a variety of local resturants
+  = simple_form_for :search, method: :get, html: { class: 'form-inline' } do |f|
+    = f.input :query, label: false, placeholder: '123 Fake St.'
+    = f.button :submit, 'Go', class: 'btn btn-primary'
+
+#cards.row
+  - welcome_cards.each do |card|
+    .col-xs-4
+      = render partial: 'card', locals: { card: card }
