Fix footer copyleft year

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -9,4 +9,4 @@ footer.main.bg-faded
         = fa_icon 'google-plus', class: 'fa-2x'
   #copyleft
     .navbar.nav-inline
-      = fa_icon('copyleft', text: '2016')
+      = fa_icon('copyleft', text: Time.now.year)
