--- a/app/views/application/welcome.slim
+++ b/app/views/application/welcome.slim
@@ -1,1 +1,7 @@
-h1.display-1.welcome Welcome
+#main-banner
+    h1.display-3
+        Order delivery or take-out!
+    h2.display-4
+        Choose from a variety of local restaurants
+    = simple_form_for :identity, :url => '/auth/identity/register' do |f| 
+
