lab done - unit tests pass

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,10 +1,11 @@
 header.main
   nav.navbar.navbar-light.bg-faded
-    = link_to image_tag('logo.png', :width => 80, :height => 40, :alt=>'Logo'), root_path, class: 'navbar-brand'
+    = link_to image_tag('logo.png', :width => 80, :height => 40, :alt=>'Logo',
+            :title=>'Logo'), root_path, class: 'navbar-brand'
     ul.nav.navbar-nav
       li.nav-item
         = link_to root_path, class: 'nav-link'
           | Home
-      li.nav-item
+      li.nav-item.float-xs-right
         = link_to "#", class: 'nav-link float-xs-right'
           | Log In
