--- a/app/views/application/welcome.slim
+++ b/app/views/application/welcome.slim
@@ -1,7 +1,13 @@
 #main-banner
-    h1.display-3
-        Order delivery or take-out!
-    h2.display-4
-        Choose from a variety of local restaurants
-    = simple_form_for :identity, :url => '/auth/identity/register' do |f| 
+    h1.display-3 Order delivery or take-out!
+    h2.display-4 Choose from a variety of local restaurants
+    = simple_form_for :identity, :method=>'get', html: {class:'form-inline'}, :url => '/' do |f| 
+        = f.input :address, placeholder: "123 Fake St."
+        = f.submit "Go", :class=>"btn btn-primary"
+    #cards.row
+    - welcome_cards.each do |card|
+        .col-xs-4
+            =render "application/card", card: card
+
+
 
